<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.example.haroonghawsi.assignment81.MainActivity">


    <GridLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_alignParentTop="true"
        android:layout_alignParentStart="true"
        android:layout_marginTop="26dp"
        android:id="@+id/gridLayout">

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/btn_changeColor"
            android:id="@+id/btn_changeColor"
            android:layout_row="0"
            android:layout_column="0" />

        <RadioGroup
            android:layout_row="1"
            android:layout_column="2">

        </RadioGroup>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:text="@string/user_name"
            android:id="@+id/user_name"
            android:layout_row="3"
            android:layout_column="0" />

        <EditText
            android:layout_width="224dp"
            android:layout_height="wrap_content"
            android:id="@+id/edit_name"
            android:layout_row="3"
            android:layout_column="1" />

        <TextView
            android:layout_width="93dp"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:text="@string/user_hobbies"
            android:id="@+id/user_hobbies"
            android:layout_row="4"
            android:layout_column="0" />

        <EditText
            android:layout_width="224dp"
            android:layout_height="wrap_content"
            android:id="@+id/edit_hobbies"
            android:layout_row="4"
            android:layout_column="1" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:text="@string/user_gender"
            android:id="@+id/user_gender"
            android:layout_row="5"
            android:layout_column="0" />

        <RadioButton
            android:layout_width="77dp"
            android:layout_height="wrap_content"
            android:text="@string/user_male"
            android:id="@+id/user_male"
            android:layout_row="5"
            android:layout_column="1" />

        <RadioButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/user_female"
            android:id="@+id/user_female"
            android:layout_row="6"
            android:layout_column="1" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:text="@string/user_phone"
            android:id="@+id/user_phone"
            android:layout_row="7"
            android:layout_column="0" />

        <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:inputType="phone"
            android:ems="10"
            android:id="@+id/edit_phone"
            android:layout_row="7"
            android:layout_column="1" />

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/btn_submit"
            android:id="@+id/btn_submit"
            android:layout_row="8"
            android:layout_column="1" />

        <AutoCompleteTextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:text="@string/search_name"
            android:id="@+id/search_name"
            android:layout_below="@+id/btn_submit"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_marginTop="16dp"
            android:layout_row="9"
            android:layout_column="0" />

        <AutoCompleteTextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/edit_nameSearch"
            android:layout_alignBottom="@+id/search_name"
            android:layout_alignRight="@+id/edit_phone"
            android:layout_alignEnd="@+id/edit_phone"
            android:layout_toRightOf="@+id/user_male"
            android:layout_toEndOf="@+id/user_male"
            android:layout_row="9"
            android:layout_column="1" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:text="@string/search_phone"
            android:id="@+id/search_phone"
            android:layout_below="@+id/search_name"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_marginTop="32dp"
            android:layout_row="10"
            android:layout_column="0" />

        <AutoCompleteTextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/edit_phoneSearch"
            android:layout_alignBottom="@+id/search_phone"
            android:layout_alignRight="@+id/edit_nameSearch"
            android:layout_alignEnd="@+id/edit_nameSearch"
            android:layout_alignLeft="@+id/edit_nameSearch"
            android:layout_alignStart="@+id/edit_nameSearch"
            android:layout_row="10"
            android:layout_column="1" />

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/btn_Save"
            android:id="@+id/btn_Save"
            android:layout_row="11"
            android:layout_column="1" />

    </GridLayout>

    <SeekBar
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/seekbar"
        android:layout_row="8"
        android:layout_column="1"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_toEndOf="@+id/seekbar_label" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/seekbar_label"
        android:id="@+id/seekbar_label"
        android:layout_row="3"
        android:layout_column="0"
        android:layout_alignParentTop="true"
        android:layout_alignParentStart="true" />

</RelativeLayout>
